--- a/templates/video.html
+++ b/templates/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <title>連番を簡単に生成！！</title>
+    <title>動画プレイヤー</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
@@ -206,4 +206,4 @@
     　　　　　    delay: 300
             });</script>
 </body>
-</html>
+    </html>
