--- a/templates/video.html
+++ b/templates/video.html
@@ -217,7 +217,7 @@
 
         eduButton.addEventListener('click', function(event) {
             event.preventDefault();
-            const eduParams = '?autoplay=0&mute=0&controls=1&start=0&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=1&fs=1&enablejsapi=1&aoriginsup=1';
+            const eduParams = '?autoplay=1&amp;mute=0&amp;controls=1&amp;start=0&amp;origin=https%3A//create.kahoot.it&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;fs=1&amp;embed_config=%7B%22enc%22%3A%22AXH1ezlDMqRg2sliE-6U84LMtrXE06quNAQW8whxjmPJyEbHIYM8iJqZyL4C1dmz65fkyGT8_CAOBPxZn1TPFdfiT_MxeBVG2kj3MBZvRPd7jtEvqyDT0ozH4dAJtJE286DsFe8aJR6nRjlvfLHzxjka-T7JKf3dXQ%3D%3D%22%2C%22hideTitle%22%3Atrue%7D&amp;enablejsapi=1&amp;widgetid=1';
             const eduUrl = `https://www.youtubeeducation.com/embed/${videoId}${eduParams}`;
             switchPlayer(eduUrl);
         });
@@ -262,3 +262,4 @@
             });</script>
 </body>
 </html>
+
