--- a/templates/404.html
+++ b/templates/404.html
@@ -2,17 +2,19 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <title>連番を簡単に生成！！</title>
+    <title>ゆずtube</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="/css/pure-min.css">
     <link rel="stylesheet" href="/css/grids-responsive-min.css">
     <link rel="stylesheet" href="/css/ionicons.min.css">
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/title.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
+    
 <body class="no-theme">
     <span style="display:none" id="dark_mode_pref"></span>
     <div class="pure-g">
