--- a/templates/channel.html
+++ b/templates/channel.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 
 <head>
-    <title>指数</title>
+    <title>ゆずtube</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -125,3 +126,4 @@
     </script>
 </body>
 </html>
+
